[package]
name = "cbf-site"
version = "0.1.0"
authors = ["Cass Forest <cityboundforest@gmail.com>"]
description = "My personal website built with WebAssembly and Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/skeetcha/skeetcha.github.io"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.79"